[workspace]
members = ["crates/*", "docs"]
default-members = ["crates/*", "docs"]
resolver = "2"

[workspace.dependencies]
deno_bindgen = "0.7"
derivative = "2"
derive_more = "0.99"
doc-comment = "0.3"
globset = "0.4"
heck = "0.4"
indent_write = "2"
indexmap = "1"
indoc = "2"
insta = "1"
lazy_static = "1"
lightningcss = "1.0.0-alpha.40"
napi = "2"
napi-build = "2"
napi-derive = "2"
palette = "0.6"
readonly = "0.2"
regex = "1"
rstest = "0.17"
serde = "1"
serde_json = "1"
similar-asserts = "1"
skeptic = "0.13"
syn = "2"
thiserror = "1"
tokio = "1"
tower-lsp = "0.19"
typed-builder = "0.14"
vfs = "0.9"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

# Internal crates
skribble = { path = "./crates/skribble", version = "0.0.0" }
skribble_color = { path = "./crates/skribble_color", version = "0.0.0" }
skribble_core = { path = "./crates/skribble_core", version = "0.0.0" }
skribble_lsp = { path = "./crates/skribble_lsp", version = "0.0.0" }
skribble_rust = { path = "./crates/skribble_rust", version = "0.0.0" }
skribble_preset = { path = "./crates/skribble_preset", version = "0.0.0" }

[workspace.package]
version = "0.0.0"
homepage = "https://skribble.dev"
repository = "https://github.com/ifiokjr/skribble"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"
license = "Unlicense"
rust-version = "1.68.0"
categories = ["web-programming", "wasm"]

[profile.release.package.skribble]
opt-level = "s"
