[workspace]
members = ["crates/*", "docs"]
default-members = ["crates/*", "docs"]
resolver = "2"

[workspace.dependencies]
abi_stable = "0.11"
clap = "4"
derivative = "2"
derive_more = "0.99"
dirs = "5"
doc-comment = "0.3"
document-features = "0.2"
globset = "0.4"
heck = "0.4"
hex = "0.4"
indent_write = "2"
indexmap = "2"
indoc = "2"
insta = "1"
lazy_static = "1"
lightningcss = "1.0.0-alpha.49"
logos = "0.13"
miette = "5"
palette = "0.7"
readonly = "0.2"
regex = "1"
rstest = "0.18"
rstest_reuse = "0.6"
rstml = "0.11"
serde = "1"
serde_json = "1"
similar-asserts = "1"
syn = "2"
tempfile = "3"
thiserror = "1"
tokio = "1"
tower-lsp = "0.20"
typed-builder = "0.18"
vfs = "0.10"
wasmer = "4"
wasmer-wasi = "3"

# Internal crates
skribble = { path = "./crates/skribble", version = "0.0.0" }
skribble_cli = { path = "./crates/skribble_cli", version = "0.0.0" }
skribble_color = { path = "./crates/skribble_color", version = "0.0.0" }
skribble_core = { path = "./crates/skribble_core", version = "0.0.0" }
skribble_lsp = { path = "./crates/skribble_lsp", version = "0.0.0" }
skribble_preset = { path = "./crates/skribble_preset", version = "0.0.0" }
skribble_rust = { path = "./crates/skribble_rust", version = "0.0.0" }
skribble_test = { path = "./crates/skribble_test", version = "0.0.0" }

[workspace.package]
version = "0.0.0"
homepage = "https://skribble.dev"
repository = "https://github.com/ifiokjr/skribble"
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
edition = "2021"
license = "Unlicense"
rust-version = "1.68.0"
categories = ["web-programming", "wasm"]

[profile.release.package.skribble]
opt-level = "s"
