[package]
name = "skribble_book"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
doc-comment = { workspace = true }
skribble = { workspace = true }
skribble_color = { workspace = true }
skribble_core = { workspace = true }
skribble_lsp = { workspace = true }
skribble_preset = { workspace = true }
skribble_rust = { workspace = true }
