[package]
name = "skribble_client"
version = { workspace = true }
authors = ["Ifiok Jr. <ifiokotung@gmail.com>"]
categories = { workspace = true }
documentation = "https://docs.rs/skribble_client"
edition = { workspace = true }
homepage = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["client", "atomic", "css"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "This is the `skribble_client` crate."

[dependencies]
