[package]
name = "skribble_core"
version = { workspace = true }
authors = { workspace = true }
documentation = "https://docs.rs/skribble_core"
edition = { workspace = true }
homepage = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["build", "atomic", "css"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
description = "Core features for the skribble atomic css library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorsys = { workspace = true }
derivative = { workspace = true }
enum-ordinalize = { workspace = true }
heck = { workspace = true }
indexmap = { features = ["serde-1"], workspace = true }
lazy_static = { workspace = true }
lightningcss = { workspace = true }
parcel_sourcemap = { workspace = true }
readonly = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
insta = { features = ["json"], workspace = true }
skribble_preset_default = { workspace = true }
