[package]
name = "skribble_core"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/skribble_core"
edition = { workspace = true }
homepage = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["build", "atomic", "css"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "Core features for the skribble atomic css library"

[features]
## By default no features are included.
default = []

## Tha abi feature add support for `abi` plugins and pulls in the required crates.
abi = ["dep:abi_stable"]

## The wasm feature adds support for `wasm` plugins and pulls in the required crates.
wasm = ["dep:wasmer", "dep:wasmer-wasi"]

[dependencies]
abi_stable = { workspace = true, optional = true }
derivative = { workspace = true }
derive_more = { workspace = true }
doc-comment = { workspace = true }
document-features = { workspace = true }
globset = { workspace = true }
heck = { workspace = true }
hex = { workspace = true }
indent_write = { workspace = true }
indexmap = { features = ["serde"], workspace = true }
lazy_static = { workspace = true }
lightningcss = { workspace = true }
miette = { workspace = true }
readonly = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
skribble_color = { workspace = true, features = ["serde"] }
tempfile = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
vfs = { workspace = true }
wasmer = { workspace = true, optional = true }
wasmer-wasi = { workspace = true, optional = true }

[dev-dependencies]
insta = { features = ["json"], workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }
skribble_test = { workspace = true }
