[package]
name = "skribble_plugin_rust"
version = { workspace = true }
authors = { workspace = true }
documentation = "https://docs.rs/skribble_plugin_rust"
edition = { workspace = true }
homepage = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["build", "atomic", "css", "preset", "skribble", "rust"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
description = "This plugin provides support for generating rust code from your `skribble` configuration."

[dependencies]
heck = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
skribble_core = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
skribble_preset_default = { workspace = true }
