[package]
name = "skribble_plugin_rust"
version = { workspace = true }
authors = { workspace = true }
categories = { workspace = true }
documentation = "https://docs.rs/skribble_plugin_rust"
edition = { workspace = true }
homepage = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["build", "atomic", "css", "preset", "skribble", "rust"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "This plugin provides support for generating rust code from your `skribble` configuration."

[dependencies]
heck = { workspace = true }
indexmap = { workspace = true }
indoc = { workspace = true }
lazy_static = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
skribble_core = { workspace = true }
syn = { workspace = true, features = ["full"] }
typed-builder = { workspace = true }

[dev-dependencies]
skribble_preset_default = { workspace = true }
