[package]
name = "skribble_preset_default"
version = { workspace = true }
authors = { workspace = true }
documentation = "https://docs.rs/skribble_preset_default"
edition = { workspace = true }
homepage = { workspace = true }
include = ["src/**/*.rs", "Cargo.toml", "readme.md"]
keywords = ["build", "atomic", "css", "preset", "skribble"]
license = { workspace = true }
readme = "readme.md"
repository = { workspace = true }
rust-version = { workspace = true }
description = "This plugin provides a default preset for Skribble which is similar to `tailwind`, `windi` and `unocss`."

[dependencies]
heck = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
skribble_core = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
