[package]
name = "with_leptos"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
leptos = { features = ["stable"], workspace = true }
log = { workspace = true }

[build-dependencies]
skribble_core = { workspace = true }
